Pull up revision 1.78 (via patch, requested by chs):   Do not apply ``block size invariant'' for VBLK vnodes, since a   buffer which crosses the end of the partition will be truncated.   Fixes PR#7938, PR#12156, PR#12698, PR#13076, PR#13210, and   PR#13288.